--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  uuid: ^4.3.3
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
